@@ -223,6 +223,12 @@ Mongos.prototype.connect = function(db, options, callback) {
                   var endTime = new Date().getTime();
                   // Mark the server with the ping time
                   _server.runtimeStats['pingMs'] = endTime - startTime;
+
+                  // If we have any buffered commands let's signal reconnect event
+                  if(self._commandsStore.count() > 0) {
+                    self.emit('reconnect');
+                  }
+
                   // Execute any waiting reads
                   self._commandsStore.execute_writes();   
                   self._commandsStore.execute_queries();   
@@ -311,6 +317,11 @@ Mongos.prototype.connect = function(db, options, callback) {
                     add_server(self, _server);
                   }
 
+                  // If we have any buffered commands let's signal reconnect event
+                  if(self._commandsStore.count() > 0) {
+                    self.emit('reconnect');
+                  }
+
                   // Execute any waiting reads
                   self._commandsStore.execute_writes();   
                   self._commandsStore.execute_queries();                  
@@ -325,6 +336,12 @@ Mongos.prototype.connect = function(db, options, callback) {
             // Set ha done
             if(numberOfServersLeft == 0) {
               self._haInProgress = false;
+
+              // If we have any buffered commands let's signal reconnect event
+              if(self._commandsStore.count() > 0) {
+                self.emit('reconnect');
+              }
+
               // Execute any waiting reads
               self._commandsStore.execute_writes();   
               self._commandsStore.execute_queries();   
