@@ -184,6 +184,11 @@ var _timeoutHandle = function(self) {
                 state.master.isMasterDoc.secondary = false;                
               }
 
+              // If we have any buffered commands let's signal reconnect event
+              if(self.replset._commandsStore.count() > 0) {
+                self.replset.emit('reconnect');
+              }
+
               // Execute any waiting commands (queries or writes)
               self.replset._commandsStore.execute_queries();
               self.replset._commandsStore.execute_writes();   
@@ -295,7 +300,13 @@ var _reconnect_servers = function(self, reconnect_servers) {
           // Override any server in list of addresses
           state.addresses[doc.me] = _server;
           // Set server as master
-          state.master = _server;     
+          state.master = _server;
+
+          // If we have any buffered commands let's signal reconnect event
+          if(self.replset._commandsStore.count() > 0) {
+            self.replset.emit('reconnect');
+          }
+
           // Execute any waiting writes
           self.replset._commandsStore.execute_writes();   
         } else if(doc.secondary) {
@@ -305,6 +316,12 @@ var _reconnect_servers = function(self, reconnect_servers) {
           state.secondaries[doc.me] = _server;
           // Override any server in list of addresses
           state.addresses[doc.me] = _server;
+
+          // If we have any buffered commands let's signal reconnect event
+          if(self.replset._commandsStore.count() > 0) {
+            self.replset.emit('reconnect');
+          }
+
           // Execute any waiting reads
           self.replset._commandsStore.execute_queries();   
         } else {
