@@ -641,6 +641,13 @@ Server.prototype.connect = function(dbInstance, options, callback) {
           self._apply_auths(server.db, function(err, result) {            
             server._serverState = 'connected';
             server._reconnectInProgreess = false;
+
+            // If we have any buffered commands let's signal reconnect event
+            if(server._commandsStore.count() > 0) {
+              server.emit('reconnect');
+            }
+
+            // Execute any buffered reads and writes
             server._commandsStore.execute_queries();
             server._commandsStore.execute_writes();
           });
